force-app/main/default/objects/Campaign/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tours</relationshipLabel>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>