force-app/main/default/objects/Campaign/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Show ID</label>
    <type>AutoNumber</type>
</CustomField>